[gd_scene load_steps=39 format=1]

[ext_resource path="res://scripts/game.gd" type="Script" id=1]
[ext_resource path="res://scripts/personagem.gd" type="Script" id=2]
[ext_resource path="res://assets/Personagem/p1_walk01.png" type="Texture" id=3]
[ext_resource path="res://assets/Personagem/p1_walk02.png" type="Texture" id=4]
[ext_resource path="res://assets/Personagem/p1_walk03.png" type="Texture" id=5]
[ext_resource path="res://assets/Personagem/p1_walk04.png" type="Texture" id=6]
[ext_resource path="res://assets/Personagem/p1_walk05.png" type="Texture" id=7]
[ext_resource path="res://assets/Personagem/p1_walk06.png" type="Texture" id=8]
[ext_resource path="res://assets/Personagem/p1_walk07.png" type="Texture" id=9]
[ext_resource path="res://tilesets/tileset.tres" type="TileSet" id=10]
[ext_resource path="res://assets/Tiles/cloud1.png" type="Texture" id=11]
[ext_resource path="res://assets/Tiles/cloud3.png" type="Texture" id=12]
[ext_resource path="res://scenes/moeda.tscn" type="PackedScene" id=13]
[ext_resource path="res://scenes/lesma.tscn" type="PackedScene" id=14]
[ext_resource path="res://scenes/blocoDest.tscn" type="PackedScene" id=15]
[ext_resource path="res://scripts/platMovel.gd" type="Script" id=16]
[ext_resource path="res://assets/Tiles/grassCliffLeft.png" type="Texture" id=17]
[ext_resource path="res://assets/Tiles/grassMid.png" type="Texture" id=18]
[ext_resource path="res://assets/Tiles/grassCliffRight.png" type="Texture" id=19]
[ext_resource path="res://assets/Botoes/esquerda0.png" type="Texture" id=20]
[ext_resource path="res://assets/Botoes/esquerda1.png" type="Texture" id=21]
[ext_resource path="res://assets/Botoes/direita0.png" type="Texture" id=22]
[ext_resource path="res://assets/Botoes/direita1.png" type="Texture" id=23]
[ext_resource path="res://assets/Botoes/cima0.png" type="Texture" id=24]
[ext_resource path="res://assets/Botoes/cima1.png" type="Texture" id=25]
[ext_resource path="res://assets/coin48.png" type="Texture" id=26]
[ext_resource path="res://fonts/font100.fnt" type="BitmapFont" id=27]
[ext_resource path="res://assets/hud_heartFull.png" type="Texture" id=28]

[sub_resource type="RectangleShape2D" id=9]

custom_solver_bias = 0.0
extents = Vector2( 12.2981, 317.072 )

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 27.9336, 56.1376 )

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 10.0
} ]

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 20.4012, 0.480469 )

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 25.1195, 53.3936 )

[sub_resource type="RectangleShape2D" id=6]

custom_solver_bias = 0.0
extents = Vector2( 22.6006, 0.938385 )

[sub_resource type="Curve2D" id=3]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, -58.8282, -5.22003, 0, 0, 0, 0, 271.868, -5.22003 )
}

[sub_resource type="Curve2D" id=7]

bake_interval = 5.0
_data = {
"points": Vector2Array( 0, 0, 0, 0, -24.6634, -1.43909, -177.866, -40.6981, 176.359, -33.1614, 266.253, -257.687, 0, 0, 0, 0, 557.169, 9.1123 )
}

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( -103.58, -33.3942, 103.378, -33.3942, 104.459, -7.99731, 95.2725, 15.2382, 51.5034, 34.1508, -48.463, 34.1508, -84.6671, 20.1014, -103.58, -2.05334 )

[sub_resource type="StyleBoxFlat" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
bg_color = Color( 0.6, 0.6, 0.6, 1 )
light_color = Color( 0.505882, 0.741176, 0.121569, 1 )
dark_color = Color( 0.501961, 0.745098, 0.121569, 1 )
border_size = 10
border_blend = false
draw_bg = false

[node name="game" type="Node"]

script/script = ExtResource( 1 )

[node name="spawn_point" type="Position2D" parent="."]

transform/pos = Vector2( 192.854, 229.866 )

[node name="spawn_time" type="Timer" parent="."]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[node name="fim" type="Area2D" parent="."]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 9 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 3398.29, 290.424 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 0

[node name="shape" type="CollisionShape2D" parent="fim"]

transform/pos = Vector2( 3398.29, 290.424 )
shape = SubResource( 9 )
trigger = false
_update_shape_index = 0

[node name="dead_camera" type="Camera2D" parent="."]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="personagem" type="KinematicBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 190.559, 480.188 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.58113, 1.3176 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 2
collision/margin = 0.01
script/script = ExtResource( 2 )

[node name="sprite" type="AnimatedSprite" parent="personagem"]

transform/scale = Vector2( 1.3, 1.3 )
frames = SubResource( 2 )
animation = "default"
frame = 4
playing = true

[node name="shape" type="CollisionShape2D" parent="personagem"]

transform/pos = Vector2( 1.58113, 1.3176 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="rayE" type="RayCast2D" parent="personagem"]

transform/pos = Vector2( -25.4474, 58.0967 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 2
type_mask = 15

[node name="rayD" type="RayCast2D" parent="personagem"]

transform/pos = Vector2( 27.8257, 58.0967 )
enabled = true
cast_to = Vector2( 0, 5 )
layer_mask = 1
type_mask = 15

[node name="camera" type="Camera2D" parent="personagem"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = 0
limit/top = -10000000
limit/right = 10000000
limit/bottom = 800
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = true
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="pes" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 59.8536 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="personagem/pes"]

transform/pos = Vector2( 0, 59.8536 )
shape = SubResource( 4 )
trigger = false
_update_shape_index = 0

[node name="corpo" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.32039, 0 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 1024
collision/mask = 8192

[node name="shape" type="CollisionShape2D" parent="personagem/corpo"]

transform/pos = Vector2( 1.32039, 0 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="cabeca" type="Area2D" parent="personagem"]

editor/display_folded = true
input/pickable = true
shapes/0/shape = SubResource( 6 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 1.7605, -59.8572 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="shape" type="CollisionShape2D" parent="personagem/cabeca"]

transform/pos = Vector2( 1.7605, -59.8572 )
shape = SubResource( 6 )
trigger = false
_update_shape_index = 0

[node name="tileMap" type="TileMap" parent="."]

mode = 0
tile_set = ExtResource( 10 )
cell/size = Vector2( 70, 70 )
cell/quadrant_size = 16
cell/custom_transform = Matrix32( 1, 0, 0, 1, 0, 0 )
cell/half_offset = 2
cell/tile_origin = 0
cell/y_sort = false
collision/use_kinematic = false
collision/friction = 1.0
collision/bounce = 0.0
collision/layers = 2
collision/mask = 1
occluder/light_mask = 1
tile_data = IntArray( -65537, 3, -131016, -1610612733, -1, 3, -65480, -1610612733, 65535, 3, 56, -1610612733, 131071, 3, 65592, -1610612733, 196607, 3, 131128, -1610612733, 262143, 3, 196644, 1, 196645, 0, 196646, 2, 196647, -1610612729, 196664, -1610612733, 327679, 3, 262200, -1610612733, 393215, 3, 327695, 1, 327696, 0, 327697, 2, 327736, -1610612733, 458751, 3, 393272, -1610612733, 524287, 3, 458775, 7, 458800, 6, 458808, -1610612733, 589823, 3, 524288, 0, 524289, 0, 524290, 0, 524291, 0, 524292, 0, 524293, 0, 524294, 0, 524295, 0, 524296, 0, 524297, 0, 524298, 0, 524299, 0, 524300, 0, 524301, 0, 524302, 0, 524303, 0, 524304, 0, 524305, 0, 524306, 0, 524307, 4, 524308, 4, 524309, 4, 524310, 0, 524311, 0, 524312, 0, 524313, 0, 524327, 0, 524328, 0, 524329, 0, 524330, 0, 524331, 0, 524332, 4, 524333, 4, 524334, 4, 524335, 0, 524336, 0, 524337, 0, 524338, 0, 524339, 0, 524340, 0, 524341, 0, 524342, 0, 524343, 0, 524344, -1610612733, 655359, 3, 589824, 3, 589825, 3, 589826, 3, 589827, 3, 589828, 3, 589829, 3, 589830, 3, 589831, 3, 589832, 3, 589833, 3, 589834, 3, 589835, 3, 589836, 3, 589837, 3, 589838, 3, 589839, 3, 589840, 3, 589841, 3, 589842, 3, 589843, 5, 589844, 5, 589845, 5, 589846, 3, 589847, 3, 589848, 3, 589849, 3, 589863, 3, 589864, 3, 589865, 3, 589866, 3, 589867, 3, 589868, 5, 589869, 5, 589870, 5, 589871, 3, 589872, 3, 589873, 3, 589874, 3, 589875, 3, 589876, 3, 589877, 3, 589878, 3, 589879, 3, 589880, -1610612733, 720895, 3, 655360, 3, 655361, 3, 655362, 3, 655363, 3, 655364, 3, 655365, 3, 655366, 3, 655367, 3, 655368, 3, 655369, 3, 655370, 3, 655371, 3, 655372, 3, 655373, 3, 655374, 3, 655375, 3, 655376, 3, 655377, 3, 655378, 3, 655379, 5, 655380, 5, 655381, 5, 655382, 3, 655383, 3, 655384, 3, 655385, 3, 655399, 3, 655400, 3, 655401, 3, 655402, 3, 655403, 3, 655404, 5, 655405, 5, 655406, 5, 655407, 3, 655408, 3, 655409, 3, 655410, 3, 655411, 3, 655412, 3, 655413, 3, 655414, 3, 655415, 3, 655416, -1610612733, 786431, 3, 720896, 3, 720897, 3, 720898, 3, 720899, 3, 720900, 3, 720901, 3, 720902, 3, 720903, 3, 720904, 3, 720905, 3, 720906, 3, 720907, 3, 720908, 3, 720909, 3, 720910, 3, 720911, 3, 720912, 3, 720913, 3, 720914, 3, 720915, 5, 720916, 5, 720917, 5, 720918, 3, 720919, 3, 720920, 3, 720921, 3, 720935, 3, 720936, 3, 720937, 3, 720938, 3, 720939, 3, 720940, 5, 720941, 5, 720942, 5, 720943, 3, 720944, 3, 720945, 3, 720946, 3, 720947, 3, 720948, 3, 720949, 3, 720950, 3, 720951, 3, 720952, -1610612733, 851967, 3, 786432, 3, 786433, 3, 786434, 3, 786435, 3, 786436, 3, 786437, 3, 786438, 3, 786439, 3, 786440, 3, 786441, 3, 786442, 3, 786443, 3, 786444, 3, 786445, 3, 786446, 3, 786447, 3, 786448, 3, 786449, 3, 786450, 3, 786451, 5, 786452, 5, 786453, 5, 786454, 3, 786455, 3, 786456, 3, 786457, 3, 786471, 3, 786472, 3, 786473, 3, 786474, 3, 786475, 3, 786476, 5, 786477, 5, 786478, 5, 786479, 3, 786480, 3, 786481, 3, 786482, 3, 786483, 3, 786484, 3, 786485, 3, 786486, 3, 786487, 3, 786488, -1610612733 )
__meta__ = {
"_edit_lock_": true
}

[node name="parallax" type="ParallaxBackground" parent="."]

editor/display_folded = true
layer = -1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
scroll/offset = Vector2( 0, 0 )
scroll/base_offset = Vector2( 0, 0 )
scroll/base_scale = Vector2( 1, 1 )
scroll/limit_begin = Vector2( 0, 0 )
scroll/limit_end = Vector2( 0, 0 )
scroll/ignore_camera_zoom = true

[node name="layer" type="ParallaxLayer" parent="parallax"]

motion/scale = Vector2( 0.5, 1 )
motion/offset = Vector2( 0, 0 )
motion/mirroring = Vector2( 0, 0 )

[node name="Sprite" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 152.235, 56.2356 )
transform/scale = Vector2( 1.15711, 1.10545 )
texture = ExtResource( 11 )

[node name="Sprite1" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 399.504, 260.233 )
transform/scale = Vector2( 1.15711, 1.10545 )
texture = ExtResource( 11 )

[node name="Sprite2" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 739.5, 90.2351 )
transform/scale = Vector2( 1.15711, 1.10545 )
texture = ExtResource( 12 )

[node name="Sprite3" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 1020.77, 211.352 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="Sprite4" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 1548.94, 123.072 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="Sprite5" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 1976.35, 278.857 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="Sprite6" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 2355.83, 182.989 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="Sprite7" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 2959, 107.094 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="Sprite8" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 3358.45, 262.879 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="Sprite9" type="Sprite" parent="parallax/layer"]

transform/pos = Vector2( 3590.13, 139.049 )
transform/scale = Vector2( 1.35029, 1.1754 )
texture = ExtResource( 11 )

[node name="moedas" type="Node2D" parent="."]

editor/display_folded = true

[node name="moeda" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 805, 525 )

[node name="moeda3" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1085, 315 )

[node name="moeda4" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1225, 315 )

[node name="moeda5" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1155, 105 )

[node name="moeda6" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1715, 245 )

[node name="moeda8" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2625, -35 )

[node name="moeda9" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2975, 525 )

[node name="moeda10" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2905, 525 )

[node name="moeda11" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 2835, 525 )

[node name="moeda7" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 1645, 245 )

[node name="moeda1" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 665, 525 )

[node name="moeda2" parent="moedas" instance=ExtResource( 13 )]

transform/pos = Vector2( 525, 525 )

[node name="inimigos" type="Node2D" parent="."]

editor/display_folded = true

[node name="lesma" parent="inimigos" instance=ExtResource( 14 )]

transform/pos = Vector2( 542.809, 546.149 )
curve = SubResource( 3 )

[node name="blocos" type="Node2D" parent="."]

editor/display_folded = true

[node name="blocoDest" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 1155, 175 )

[node name="blocoDest1" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 665, 385 )

[node name="blocoDest2" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 1715, 385 )

[node name="blocoDest3" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 1645, 385 )

[node name="blocoDest4" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 2625, 35 )

[node name="blocoDest5" parent="blocos" instance=ExtResource( 15 )]

transform/pos = Vector2( 2905, 385 )

[node name="plataformas" type="Node2D" parent="."]

editor/display_folded = true

[node name="platMovel" type="Path2D" parent="plataformas"]

editor/display_folded = true
transform/pos = Vector2( 1995, 595 )
curve = SubResource( 7 )

[node name="follow" type="PathFollow2D" parent="plataformas/platMovel"]

transform/pos = Vector2( -24.6634, -1.43909 )
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = false
cubic_interp = true
loop = true
lookahead = 4.0

[node name="body" type="KinematicBody2D" parent="plataformas/platMovel/follow"]

input/pickable = false
shapes/0/shape = SubResource( 8 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="plataformas/platMovel/follow/body"]

transform/pos = Vector2( -70, 0 )
texture = ExtResource( 17 )

[node name="Sprite1" type="Sprite" parent="plataformas/platMovel/follow/body"]

texture = ExtResource( 18 )

[node name="Sprite2" type="Sprite" parent="plataformas/platMovel/follow/body"]

transform/pos = Vector2( 70, 0 )
texture = ExtResource( 19 )

[node name="poly" type="CollisionPolygon2D" parent="plataformas/platMovel/follow/body"]

build_mode = 0
polygon = Vector2Array( -103.58, -33.3942, 103.378, -33.3942, 104.459, -7.99731, 95.2725, 15.2382, 51.5034, 34.1508, -48.463, 34.1508, -84.6671, 20.1014, -103.58, -2.05334 )
shape_range = Vector2( 0, 0 )
trigger = false

[node name="canvasLayer" type="CanvasLayer" parent="."]

editor/display_folded = true
layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="controles" type="Node2D" parent="canvasLayer"]

editor/display_folded = true

[node name="touchLeft" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 9.74007, 586.353 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 20 )
pressed = ExtResource( 21 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchRight" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 171.425, 586.353 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 22 )
pressed = ExtResource( 23 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="touchUp" type="TouchScreenButton" parent="canvasLayer/controles"]

transform/pos = Vector2( 1135.69, 586.353 )
transform/scale = Vector2( 3.5, 3.5 )
normal = ExtResource( 24 )
pressed = ExtResource( 25 )
bitmask = null
shape = null
shape_centered = true
shape_visible = true
passby_press = false
action = ""
visibility_mode = 0

[node name="Panel" type="Panel" parent="canvasLayer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 100.0
custom_styles/panel = SubResource( 10 )

[node name="moeda" type="Sprite" parent="canvasLayer/Panel"]

transform/pos = Vector2( 51.4508, 49.1714 )
transform/scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 26 )
hframes = 61

[node name="moedas" type="Label" parent="canvasLayer/Panel"]

rect/scale = Vector2( 0.9, 0.9 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 93.0
margin/top = 6.0
margin/right = 236.0
margin/bottom = 179.0
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 0.772549, 0.560784, 0.360784, 1 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="heart3" type="TextureFrame" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1188.0
margin/top = 16.0
margin/right = 1260.0
margin/bottom = 88.0
texture = ExtResource( 28 )
expand = true
stretch_mode = 6

[node name="heart2" type="TextureFrame" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1108.0
margin/top = 16.0
margin/right = 1180.0
margin/bottom = 88.0
texture = ExtResource( 28 )
expand = true
stretch_mode = 6

[node name="heart1" type="TextureFrame" parent="canvasLayer/Panel"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1029.0
margin/top = 16.0
margin/right = 1101.0
margin/bottom = 88.0
texture = ExtResource( 28 )
expand = true
stretch_mode = 6

[node name="time" type="Label" parent="canvasLayer/Panel"]

anchor/left = 3
anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 105.0
margin/top = 0.0
margin/right = -75.0
margin/bottom = 107.0
custom_fonts/font = ExtResource( 27 )
custom_colors/font_color = Color( 0.772549, 0.560784, 0.360784, 1 )
text = "30"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="game_time" type="Timer" parent="."]

process_mode = 1
wait_time = 30.0
one_shot = true
autostart = true

[connection signal="timeout" from="spawn_time" to="." method="_on_spawn_time_timeout"]

[connection signal="body_enter" from="fim" to="personagem" method="_on_fim_body_enter"]

[connection signal="fim" from="personagem" to="." method="_on_personagem_fim"]

[connection signal="moeda" from="personagem" to="." method="_on_personagem_moeda"]

[connection signal="morreu" from="personagem" to="." method="_on_personagem_morreu"]

[connection signal="body_enter" from="personagem/pes" to="personagem" method="_on_pes_body_enter"]

[connection signal="body_enter" from="personagem/corpo" to="personagem" method="_on_corpo_body_enter"]

[connection signal="body_enter" from="personagem/cabeca" to="personagem" method="_on_cabeca_body_enter"]

[connection signal="pressed" from="canvasLayer/controles/touchLeft" to="personagem" method="_on_touchLeft_pressed"]

[connection signal="released" from="canvasLayer/controles/touchLeft" to="personagem" method="_on_touchLeft_released"]

[connection signal="pressed" from="canvasLayer/controles/touchRight" to="personagem" method="_on_touchRight_pressed"]

[connection signal="released" from="canvasLayer/controles/touchRight" to="personagem" method="_on_touchRight_released"]

[connection signal="pressed" from="canvasLayer/controles/touchUp" to="personagem" method="_on_touchUp_pressed"]

[connection signal="released" from="canvasLayer/controles/touchUp" to="personagem" method="_on_touchUp_released"]

[connection signal="timeout" from="game_time" to="personagem" method="_on_game_time_timeout"]


